--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>base</artifactId>
     <groupId>org.sakaiproject</groupId>
-    <version>2.6.0RC1-SNAPSHOT</version>
+    <version>3.0.0-milestone01</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <name>Sakai Web Project</name>
@@ -50,17 +50,17 @@
       <dependency>
         <groupId>org.sakaiproject</groupId>
         <artifactId>sakai-news-impl</artifactId>
-        <version>2.6.0RC1-SNAPSHOT</version>
+        <version>3.0.0-milestone01</version>
       </dependency>
       <dependency>
         <groupId>org.sakaiproject</groupId>
         <artifactId>sakai-web-impl</artifactId>
-        <version>2.6.0RC1-SNAPSHOT</version>
+        <version>3.0.0-milestone01</version>
       </dependency>
       <dependency>
         <groupId>org.sakaiproject</groupId>
         <artifactId>sakai-velocity-tool</artifactId>
-        <version>2.6.0RC1-SNAPSHOT</version>
+        <version>3.0.0-milestone01</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
