SAK-16138 update eclipse metadata files
git-svn-id: https://source.sakaiproject.org/svn/web/branches/sakai-2.6.0@60733 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/news-impl/pack/.classpath
+++ b/news-impl/pack/.classpath
@@ -7,6 +7,6 @@
   <classpathentry kind="var" path="M2_REPO/junit/junit/3.8.1/junit-3.8.1.jar"/>
   <classpathentry kind="var" path="M2_REPO/rome/rome/0.8/rome-0.8.jar"/>
   <classpathentry kind="var" path="M2_REPO/rome/rome-fetcher/0.7/rome-fetcher-0.7.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/sakaiproject/kernel/sakai-kernel-util/1.0.7-SNAPSHOT/sakai-kernel-util-1.0.7-SNAPSHOT.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/sakaiproject/kernel/sakai-kernel-util/1.0.6/sakai-kernel-util-1.0.6.jar"/>
   <classpathentry kind="src" path="/sakai-news-impl"/>
 </classpath>
