SAK-17392 -- update <scm>
git-svn-id: https://source.sakaiproject.org/svn/web/branches/sakai-2.7.x@68936 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/pom.xml
+++ b/pom.xml
@@ -12,9 +12,9 @@
   <artifactId>web-base</artifactId>
   <packaging>pom</packaging>
   <scm>
-    <connection>scm:svn:https://source.sakaiproject.org/svn/web/trunk</connection>
-    <developerConnection>scm:svn:https://source.sakaiproject.org/svn/web/trunk</developerConnection>
-    <url>https://source.sakaiproject.org/svn/web/trunk</url>
+    <connection>scm:svn:https://source.sakaiproject.org/svn/web/branches/sakai-2.7.x</connection>
+    <developerConnection>scm:svn:https://source.sakaiproject.org/svn/web/branches/sakai-2.7.x</developerConnection>
+    <url>https://source.sakaiproject.org/svn/web/branches/sakai-2.7.x</url>
   </scm>
   <profiles>
     <profile>
