--- a/news-impl/impl/pom.xml
+++ b/news-impl/impl/pom.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <artifactId>web-base</artifactId>
@@ -19,6 +21,15 @@
   <properties>
     <deploy.target/>
   </properties>
+  <repositories>
+    <repository>
+      <id>download.java.net</id>
+      <name>Java.NET Download</name>
+      <url>http://download.java.net/maven/2/</url>
+      <releases><enabled>true</enabled></releases>
+      <snapshots><enabled>false</enabled></snapshots>
+    </repository>
+  </repositories>
   <dependencies>
     <dependency>
       <groupId>org.sakaiproject.kernel</groupId>
@@ -55,17 +66,17 @@
     <dependency>
       <groupId>rome</groupId>
       <artifactId>rome</artifactId>
-      <version>0.8</version>
+      <version>1.0-sakai</version>
     </dependency>
     <dependency>
       <groupId>rome</groupId>
       <artifactId>rome-fetcher</artifactId>
-      <version>0.7</version>
+      <version>1.0</version>
     </dependency>
     <dependency>
       <groupId>rome</groupId>
-      <artifactId>itunes</artifactId>
-      <version>0.3</version>
+      <artifactId>modules</artifactId>
+      <version>0.3.2</version>
     </dependency>
     <dependency>
       <groupId>jdom</groupId>
@@ -84,6 +95,7 @@
       <version>1.3</version>
     </dependency>
   </dependencies>
+
   <build>
     <resources/>
   </build>
