--- a/web-tool/tool/src/webapp/WEB-INF/web.xml
+++ b/web-tool/tool/src/webapp/WEB-INF/web.xml
@@ -42,6 +42,14 @@
         <dispatcher>FORWARD</dispatcher>
         <dispatcher>INCLUDE</dispatcher>
     </filter-mapping>
+    
+    <filter-mapping>
+        <filter-name>sakai.request</filter-name>
+        <servlet-name>sakai.iframe.annotatedurl</servlet-name>
+        <dispatcher>REQUEST</dispatcher>
+        <dispatcher>FORWARD</dispatcher>
+        <dispatcher>INCLUDE</dispatcher>
+    </filter-mapping>
 
 	<!-- the vm handling servlet : used direct by name, not by URL path -->
 	<servlet>
@@ -110,6 +118,20 @@
         <init-param>
             <param-name>template</param-name>
             <param-value>web/chef_iframe</param-value>
+        </init-param>
+        <load-on-startup>1</load-on-startup>
+     </servlet>
+     
+     <servlet>
+        <servlet-name>
+           sakai.iframe.annotatedurl
+        </servlet-name>
+        <servlet-class>
+            org.sakaiproject.web.tool.IFrameAction
+        </servlet-class>
+        <init-param>
+            <param-name>template</param-name>
+            <param-value>web/chef_iframe</param-value>            
         </init-param>
         <load-on-startup>1</load-on-startup>
      </servlet>
