--- a/web-tool/tool/src/bundle/iframe.properties
+++ b/web-tool/tool/src/bundle/iframe.properties
@@ -3,6 +3,7 @@ gen.alert = Alert:
 gen.custom = Customize Web Content
 gen.custom.site = Customize Server Info Display
 gen.custom.worksite = Customize Site Info Display
+gen.custom.annotatedurl = Customize Instruction Info Display
 gen.custom.workspace = Customize My Workspace Info Display
 gen.height = Frame Height
 gen.title = Title
