SAK-19515 fix possible to create a DBwrite error due to a long title in My Workspace Information title, added limit to length of inputs applied patch from Thomas Behlau (unicon)
git-svn-id: https://source.sakaiproject.org/svn/web/trunk@86725 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/web-tool/tool/src/bundle/iframe.properties
+++ b/web-tool/tool/src/bundle/iframe.properties
@@ -8,7 +8,11 @@ gen.custom.workspace = Customize My Workspace Info Display
 gen.height = Frame Height
 gen.title = Title
 gen.tootit = Tool Title
+gen.tootit.empty = Tool title cannot be empty
+gen.tootit.toolong = Tool title to long (max 99 characters)
 gen.pagtit = Page Title
+gen.pagtit.empty = Tool title cannot be empty
+gen.pagtit.toolong = Tool title to long (max 99 characters)
 gen.url = URL
 gen.save = Update Options
 gen.cancel = Cancel
