--- a/web-tool/tool/src/bundle/iframe.properties
+++ b/web-tool/tool/src/bundle/iframe.properties
@@ -9,10 +9,10 @@ gen.height = Frame Height
 gen.title = Title
 gen.tootit = Tool Title
 gen.tootit.empty = Tool title cannot be empty
-gen.tootit.toolong = Tool title to long (max 99 characters)
+gen.tootit.toolong = Tool title too long (max 99 characters)
 gen.pagtit = Page Title
 gen.pagtit.empty = Tool title cannot be empty
-gen.pagtit.toolong = Tool title to long (max 99 characters)
+gen.pagtit.toolong = Tool title too long (max 99 characters)
 gen.url = URL
 gen.save = Update Options
 gen.cancel = Cancel
@@ -20,6 +20,7 @@ gen.options = Options
 gen.description = Description
 gen.info.url = Site Info URL
 gen.info.url.msg = If specified, this URL will be shown instead of the Site description.
+gen.info.url.toolong = Site Info URL too long (max 255 characters)
 
 gen.hei1 = 300 pixels
 gen.hei2 = 450 pixels
