--- a/web-tool/tool/src/bundle/iframe.properties
+++ b/web-tool/tool/src/bundle/iframe.properties
@@ -33,3 +33,4 @@ gen.info.pop = Open in new window?
 ### (moot) gen.info.no = no
 
 java.alert.pleentval = The height you entered was not valid.
+gen.info.title.message = My Workspace Information Message
