SAK-21622 fix web content error message with empty page title
git-svn-id: https://source.sakaiproject.org/svn/web/trunk@102486 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/web-tool/tool/src/bundle/iframe.properties
+++ b/web-tool/tool/src/bundle/iframe.properties
@@ -11,8 +11,8 @@ gen.tootit = Tool Title
 gen.tootit.empty = Tool title cannot be empty
 gen.tootit.toolong = Tool title too long (max 99 characters)
 gen.pagtit = Page Title
-gen.pagtit.empty = Tool title cannot be empty
-gen.pagtit.toolong = Tool title too long (max 99 characters)
+gen.pagtit.empty = Page title cannot be empty
+gen.pagtit.toolong = Page title too long (max 99 characters)
 gen.url = URL
 gen.save = Update Options
 gen.cancel = Cancel
