--- a/web-tool/tool/pom.xml
+++ b/web-tool/tool/pom.xml
@@ -39,6 +39,11 @@
       <version>1.0.4</version>
     </dependency>
     <dependency>
+      <groupId>commons-validator</groupId>
+      <artifactId>commons-validator</artifactId>
+      <version>1.3.1</version>
+    </dependency>
+    <dependency>
       <groupId>org.sakaiproject.velocity</groupId>
       <artifactId>sakai-velocity-tool-api</artifactId>
     </dependency>
