--- a/web-tool/tool/src/bundle/iframe.properties
+++ b/web-tool/tool/src/bundle/iframe.properties
@@ -9,10 +9,12 @@ gen.height = Frame Height
 gen.title = Title
 gen.tootit = Tool Title
 gen.tootit.empty = Tool title cannot be empty
-gen.tootit.toolong = Tool title too long (max 99 characters)
+gen.tootit.toolong = Tool title is too long (max 99 characters)
 gen.pagtit = Page Title
 gen.pagtit.empty = Page title cannot be empty
-gen.pagtit.toolong = Page title too long (max 99 characters)
+gen.pagtit.toolong = Page title is too long (max 99 characters)
+gen.url.empty = URL cannot be empty
+gen.url.invalid = The URL you entered is not valid.
 gen.url = URL
 gen.save = Update Options
 gen.cancel = Cancel
@@ -20,7 +22,7 @@ gen.options = Options
 gen.description = Description
 gen.info.url = Site Info URL
 gen.info.url.msg = If specified, this URL will be shown instead of the Site description.
-gen.info.url.toolong = Site Info URL too long (max 255 characters)
+gen.info.url.toolong = Site Info URL is too long (max 255 characters)
 
 gen.hei1 = 300 pixels
 gen.hei2 = 450 pixels
@@ -38,5 +40,5 @@ gen.info.pop = Open in new window?
 ### (moot) gen.info.yes = yes
 ### (moot) gen.info.no = no
 
-java.alert.pleentval = The height you entered was not valid.
+java.alert.pleentval = The height you entered is not valid.
 gen.info.title.message = My Workspace Information Message
