--- a/news-impl/impl/pom.xml
+++ b/news-impl/impl/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>web-base</artifactId>
     <groupId>org.sakaiproject</groupId>
-    <version>2.9-SNAPSHOT</version>
+    <version>2.9.0-b01</version>
     <relativePath>../../pom.xml</relativePath>
   </parent>
   <name>sakai-news-impl</name>
@@ -52,6 +52,7 @@
     <dependency>
       <groupId>org.sakaiproject</groupId>
       <artifactId>sakai-news-api</artifactId>
+      <version>${project.version}</version>
     </dependency>
 <!--org.sakaiprojectsakai-util-api${sakai.version}-->
 <!--org.sakaiprojectsakai-util${sakai.version}-->
