--- a/web-impl/impl/pom.xml
+++ b/web-impl/impl/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>web-base</artifactId>
     <groupId>org.sakaiproject</groupId>
-    <version>2.9-SNAPSHOT</version>
+    <version>2.9.0-b01</version>
     <relativePath>../../pom.xml</relativePath>
   </parent>
   <name>sakai-web-impl</name>
@@ -48,6 +48,7 @@
     <dependency>
       <groupId>org.sakaiproject</groupId>
       <artifactId>sakai-web-api</artifactId>
+      <version>${project.version}</version>
     </dependency>
 <!--org.sakaiprojectsakai-entity-api${sakai.version}-->
 <!--org.sakaiprojectsakai-entity-util${sakai.version}-->
