--- a/pom.xml
+++ b/pom.xml
@@ -10,12 +10,12 @@
   <name>Sakai Web Project</name>
   <groupId>org.sakaiproject</groupId>
   <artifactId>web-base</artifactId>
-  <version>2.9.0-b01</version>
+  <version>2.9-SNAPSHOT</version>
   <packaging>pom</packaging>
   <scm>
-    <connection>scm:svn:https://source.sakaiproject.org/svn/web/tags/sakai-2.9.0-b01</connection>
-    <developerConnection>scm:svn:https://source.sakaiproject.org/svn/web/tags/sakai-2.9.0-b01</developerConnection>
-    <url>https://source.sakaiproject.org/svn/web/tags/sakai-2.9.0-b01</url>
+    <connection>scm:svn:https://source.sakaiproject.org/svn/web/branches/sakai-2.9.0-b01</connection>
+    <developerConnection>scm:svn:https://source.sakaiproject.org/svn/web/branches/sakai-2.9.0-b01</developerConnection>
+    <url>https://source.sakaiproject.org/svn/web/branches/sakai-2.9.0-b01</url>
   </scm>
   <profiles>
     <profile>
@@ -51,12 +51,12 @@
       <dependency>
         <groupId>org.sakaiproject</groupId>
         <artifactId>sakai-news-impl</artifactId>
-        <version>2.9.0-b01</version>
+        <version>2.9-SNAPSHOT</version>
       </dependency>
       <dependency>
         <groupId>org.sakaiproject</groupId>
         <artifactId>sakai-web-impl</artifactId>
-        <version>2.9.0-b01</version>
+        <version>2.9-SNAPSHOT</version>
       </dependency>
       <dependency>
         <groupId>org.sakaiproject.velocity</groupId>
