--- a/pom.xml
+++ b/pom.xml
@@ -25,8 +25,8 @@
         <module>web-help</module>
         <module>web-impl/impl</module>
         <module>web-impl/pack</module>
-        <module>web-tool/tool</module>
-        <module>web-portlet</module>
+        <!-- <module>web-tool/tool</module> -->
+        <module>web-portlet</module> 
       </modules>
     </profile>
     <profile>
@@ -43,7 +43,8 @@
         <module>web-help</module>
         <module>web-impl/impl</module>
         <module>web-impl/pack</module>
-        <module>web-tool/tool</module>
+        <!-- <module>web-tool/tool</module> -->
+        <module>web-portlet</module> 
       </modules>
     </profile>
   </profiles>
