--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
         <module>web-help</module>
         <module>web-impl/impl</module>
         <module>web-impl/pack</module>
-        <!-- <module>web-tool/tool</module> -->
+        <module>web-tool/tool</module>
         <module>web-portlet</module> 
       </modules>
     </profile>
@@ -43,7 +43,7 @@
         <module>web-help</module>
         <module>web-impl/impl</module>
         <module>web-impl/pack</module>
-        <!-- <module>web-tool/tool</module> -->
+        <module>web-tool/tool</module>
         <module>web-portlet</module> 
       </modules>
     </profile>
