--- a/web-portlet/src/bundle/iframe.properties
+++ b/web-portlet/src/bundle/iframe.properties
@@ -3,11 +3,18 @@ gen.alert = Alert:
 gen.custom = Customize Web Content
 gen.custom.site = Customize Server Info Display
 gen.custom.worksite = Customize Site Info Display
+gen.custom.annotatedurl = Customize Instruction Info Display
 gen.custom.workspace = Customize My Workspace Info Display
 gen.height = Frame Height
 gen.title = Title
 gen.tootit = Tool Title
+gen.tootit.empty = Tool title cannot be empty
+gen.tootit.toolong = Tool title is too long (max 99 characters)
 gen.pagtit = Page Title
+gen.pagtit.empty = Page title cannot be empty
+gen.pagtit.toolong = Page title is too long (max 99 characters)
+gen.url.empty = URL cannot be empty
+gen.url.invalid = The URL you entered is not valid.
 gen.url = URL
 gen.save = Update Options
 gen.cancel = Cancel
@@ -15,10 +22,7 @@ gen.options = Options
 gen.description = Description
 gen.info.url = Site Info URL
 gen.info.url.msg = If specified, this URL will be shown instead of the Site description.
-gen.info.maximize = Launch Maximum Width
-
-new.page.launch=Page opened in new window.
-new.page.relaunch=Press to re-launch page.
+gen.info.url.toolong = Site Info URL is too long (max 255 characters)
 
 gen.hei1 = 300 pixels
 gen.hei2 = 450 pixels
@@ -31,9 +35,10 @@ gen.hei8 = 2400 pixels
 gen.heisomelse = Something else
 gen.custheight = Custom height
 gen.pixels = pixels
-
+gen.pixelshid = (in pixels)
 gen.info.pop = Open in new window?
-gen.info.yes = yes
-gen.info.no = no
+### (moot) gen.info.yes = yes
+### (moot) gen.info.no = no
 
-java.alert.pleentval = The height you entered was not valid.
+java.alert.pleentval = The height you entered is not valid.
+gen.info.title.message = My Workspace Information Message
