--- a/web-portlet/src/bundle/iframe.properties
+++ b/web-portlet/src/bundle/iframe.properties
@@ -42,3 +42,7 @@ gen.info.pop = Open in new window?
 
 java.alert.pleentval = The height you entered is not valid.
 gen.info.title.message = My Workspace Information Message
+gen.info.maximize = Launch Maximum Width
+
+new.page.launch = Page launched in a new window.
+new.page.relaunch = Re-launch page in a new window.
