--- a/web-portlet/src/bundle/iframe.properties
+++ b/web-portlet/src/bundle/iframe.properties
@@ -44,7 +44,8 @@ java.alert.pleentval = The height you entered is not valid.
 gen.info.title.message = My Workspace Information Message
 gen.info.maximize = Launch Maximum Width
 
-gen.trouble.loading = This page seems to have trouble loading
+gen.trouble.loading = This page seems to have trouble loading.
 
 new.page.launch = Page launched in a new window.
 new.page.relaunch = Re-launch page in a new window.
+dissmiss.page.relaunch.message = Click to dismiss 
