SAK-23721 - Centralize commons-logging version
Thanks to Charles Hasegawa and Unicon for testing the patch!



git-svn-id: https://source.sakaiproject.org/svn/web/trunk@126177 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/news-impl/impl/pom.xml
+++ b/news-impl/impl/pom.xml
@@ -84,7 +84,7 @@
     <dependency>
       <groupId>commons-logging</groupId>
       <artifactId>commons-logging</artifactId>
-      <version>1.0.4</version>
+      <version>${sakai.commons-logging.version}</version>
     </dependency>
 <!--javax.servletservlet-api${sakai.servletapi.version}-->
     <dependency>
