--- a/news-tool/tool/pom.xml
+++ b/news-tool/tool/pom.xml
@@ -53,7 +53,7 @@
     <dependency>
       <groupId>commons-logging</groupId>
       <artifactId>commons-logging</artifactId>
-      <version>1.0.4</version>
+      <version>${sakai.commons-logging.version}</version>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
