--- a/web-portlet/pom.xml
+++ b/web-portlet/pom.xml
@@ -43,6 +43,11 @@
             <version>1.3.1</version>
         </dependency>
         <dependency>
+			<groupId>commons-httpclient</groupId>
+			<artifactId>commons-httpclient</artifactId>
+			<version>3.1</version>
+        </dependency>
+        <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
         </dependency>
