--- a/news-impl/impl/pom.xml
+++ b/news-impl/impl/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>web-base</artifactId>
     <groupId>org.sakaiproject</groupId>
-    <version>2.10-SNAPSHOT</version>
+    <version>2.9.1</version>
     <relativePath>../../pom.xml</relativePath>
   </parent>
   <name>sakai-news-impl</name>
@@ -84,7 +84,6 @@
     <dependency>
       <groupId>commons-logging</groupId>
       <artifactId>commons-logging</artifactId>
-      <version>${sakai.commons-logging.version}</version>
     </dependency>
 <!--javax.servletservlet-api${sakai.servletapi.version}-->
     <dependency>
