--- a/web-portlet/pom.xml
+++ b/web-portlet/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>web-base</artifactId>
     <groupId>org.sakaiproject</groupId> 
-    <version>2.10-SNAPSHOT</version>
+    <version>2.9.1</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <name>sakai-web-portlet</name>
@@ -43,6 +43,11 @@
 			<version>3.1</version>
         </dependency>
 		<!-- remove when KNL-1105 is handled -->
+        <dependency>
+             <groupId>commons-validator</groupId>
+             <artifactId>commons-validator</artifactId>
+             <version>1.4.0</version>
+         </dependency>
         <dependency>
              <groupId>commons-validator</groupId>
              <artifactId>commons-validator</artifactId>
