--- a/web-tool/tool/pom.xml
+++ b/web-tool/tool/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>web-base</artifactId>
     <groupId>org.sakaiproject</groupId>
-    <version>2.10-SNAPSHOT</version>
+    <version>2.9.1</version>
     <relativePath>../../pom.xml</relativePath>
   </parent>
   <name>sakai-web-tool</name>
@@ -45,7 +45,6 @@
     <dependency>
       <groupId>commons-logging</groupId>
       <artifactId>commons-logging</artifactId>
-      <version>${sakai.commons-logging.version}</version>
     </dependency>
     <dependency>
       <groupId>commons-validator</groupId>
