--- a/web-portlet/pom.xml
+++ b/web-portlet/pom.xml
@@ -59,9 +59,9 @@
     </dependency>
 <!-- velocity and dependencies (logkit, oro, collections) -->
     <dependency>
-      <groupId>velocity</groupId>
+      <groupId>org.apache.velocity</groupId>
       <artifactId>velocity</artifactId>
-      <version>1.3.1</version>
+      <version>${sakai.velocity.version}</version>
     </dependency>
     <dependency>
       <groupId>logkit</groupId>
