SAK-25771 Upgrade lombo to 1.12.4 which supports JDK 8
git-svn-id: https://source.sakaiproject.org/svn/web/trunk@306240 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/news-tool/tool/pom.xml
+++ b/news-tool/tool/pom.xml
@@ -63,8 +63,9 @@
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
-      <version>0.11.4</version>
-    </dependency>        
+      <version>1.12.4</version>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
 
   <build>
