SAK-27855 Custom IFrame won't popup for insecure urls because of XFrame options
git-svn-id: https://source.sakaiproject.org/svn/web/trunk@312497 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/web-tool/tool/src/bundle/iframe.properties
+++ b/web-tool/tool/src/bundle/iframe.properties
@@ -42,3 +42,6 @@ gen.info.pop = Open in new window?
 
 java.alert.pleentval = The height you entered is not valid.
 gen.info.title.message = My Workspace Information Message
+
+gen.trouble.loading=Page launched in a new window.
+new.page.relaunch=Re-launch page in a new window.
